crates/concrete/tests/invalid_programs/type.con
mod Simple {
    fn main(a: invalid_type) -> i32 {
        return 0;
    }
}
